sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:9: error: type mismatch;
 found   : Unit
 required: Boolean
  while ((test!=0)&&(test2=0)){
                          ^