sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3(){
  var test2=0
  var test = 1
  var lgr = getNombreValeurs()
  var debut = 0
  var fin = lgr-2
  
  while ((test!=0)&&(test2=0)){
    test = 0
    test2 = 0
    for (i <- debut to fin){
      if (!plusPetit(i,i+1)){
        echange(i,i+1)
        test = 2
        test2 = 1
      }
    }
    fin -= 1
    for (i <- fin to debut by -1){
      if (!plusPetit(i,i+1)){
        echange(i,i+1)
        test = 1
      }
    }
    debut += 1
  }
}